# build-ubuntu16

./: Dockerfile  build_and_copy.sh
hello-world/: Cargo.toml
hello-world/src/: main.rs
