[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
clap = { version = "4.0.17", features = ["derive"] }
chrono = "0.4.22"
docker-api = "0.12.0"
futures = "0.3.24"
libc = "0.2.137"
reqwest = { version = "0.11.12", features = ["json", "rustls", "rustls-tls"], default-features = false }
tokio = { version = "1.21.2", features = ["full"] }
